appId: ${APP_ID}
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      id: 'onboarding-button'
    timeout: 10000
- assertVisible:
    id: 'onboarding-button'
- tapOn:
    id: 'onboarding-button'
- assertVisible:
    id: 'home-title'
